# sbv2-api

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Colab-sbv2_bindings-CPU.ipynb  LICENSE  README.md  content.txt  query.json  test.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  バグの報告.md
.github/workflows/: CI.Dockerfile  CI.yml  build.yml
convert/: LICENSE  README.md  convert_model.py  requirements.txt
crates/sbv2_api/: Cargo.toml  build.rs
crates/sbv2_api/src/: main.rs
crates/sbv2_bindings/: Cargo.toml  pyproject.toml
crates/sbv2_bindings/src/: lib.rs  sbv2.rs  style.rs
crates/sbv2_core/: Cargo.toml  build.rs
crates/sbv2_core/src/: bert.rs  error.rs  jtalk.rs  lib.rs  main.rs  model.rs  nlp.rs  norm.rs  tokenizer.rs  tts.rs  tts_util.rs  utils.rs
crates/sbv2_wasm/: Cargo.toml  biome.json  build.sh  example.html  example.js  package.json  pnpm-lock.yaml
crates/sbv2_wasm/src/: array_helper.rs  lib.rs
crates/sbv2_wasm/src-js/: index.ts
docker/: cuda.Dockerfile  run.sh  run_cpu.sh  run_cuda.sh
sbv2_api/: Cargo.toml  build.rs
sbv2_api/src/: error.rs  main.rs
sbv2_bindings/: Cargo.toml  pyproject.toml
sbv2_bindings/examples/: basic.py
sbv2_bindings/src/: lib.rs  sbv2.rs  style.rs
sbv2_core/: Cargo.toml  convert.py  mora_convert.py
sbv2_core/src/: bert.rs  error.rs  jtalk.rs  lib.rs  main.rs  model.rs  mora.rs  mora_list.json  nlp.rs  norm.rs  sbv2file.rs  style.rs  text.rs  tokenizer.rs  tts.rs  tts_util.rs  utils.rs
sbv2_wasm/: Cargo.toml  README.md  build.sh  package.json  pnpm-lock.yaml  tsconfig.json
sbv2_wasm/src/: lib.rs
sbv2_wasm/src-js/: index.ts
sbv2_web/: Cargo.toml
scripts/: .gitignore  make_dict.sh  sbv2-bindings-colab.ipynb  sbv2-test-bindings.py
scripts/convert/: convert_deberta.py  convert_model.py
scripts/docker/: cpu.Dockerfile
