[package]
name = "sbv2_core"
description = "Style-Bert-VITSの推論ライブラリ"
version = "0.2.0-alpha"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/tuna2134/sbv2-api"
documentation = "https://docs.rs/sbv2_core"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
hound = "3.5.1"
jpreprocess = { version = "0.10.0", features = ["naist-jdic"] }
ndarray.workspace = true
num_cpus = "1.16.0"
once_cell = "1.19.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tar = "0.4.41"
thiserror = "1.0.63"
# tokenizers = "0.20.0"
zstd = "0.13.2"

[target.'cfg(target_arch="wasm32")'.dependencies]
wonnx = "0.5.1"
tokenizers = { version = "0.20.0", default-features = false, features = ["unstable_wasm"]}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
ort = { git = "https://github.com/pykeio/ort.git", version = "2.0.0-rc.6" }

[features]
cuda = ["ort/cuda"]
cuda_tf32 = []
dynamic = ["ort/load-dynamic"]
directml = ["ort/directml"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]